@@ -4,5 +4,6 @@ Chạy qua javafx plugin của maven: mvn clean javafx:run
 Chạy qua ide: Thêm VM option:
 
 --add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
-
+--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls
+--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
 --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
